--- a/Masterarbeit/TrackingWindow.xaml
+++ b/Masterarbeit/TrackingWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"    
         xmlns:gaze="clr-namespace:SPOCK.UIElements;assembly=EyeMovementUIElements"           
-        Title="TrackingWindow" Width="1920" Height="1000" ResizeMode="NoResize" WindowStyle="None"  AllowsTransparency="True"
+        Title="TrackingWindow" Width="1920" Height="1000" ResizeMode="NoResize" WindowStyle="None" Cursor="None" AllowsTransparency="True"
         Background="Transparent"  Topmost="False">
         
     <Canvas>
